Fix compilation errors and Java version config